syntax = "proto3";
package chat;


service ChatService {
  // Get RPCs
  rpc GetOnlineStatus(GetUserRequest) returns (GetOnlineStatusResponse);
 
  // Set RPCs
  rpc SetOnlineStatus(SetOnlineStatusRequest) returns (SetOnlineStatusResponse);
 
}

message SetOnlineStatusResponse {
  bool success = 1;
}

message SetOnlineStatusRequest {
  string user_id = 1;
  int32 status = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message GetOnlineStatusResponse {
  int32 status = 1;
}
